<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>LXQtTaskbarConfiguration</class>
 <widget class="QDialog" name="LXQtTaskbarConfiguration">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>401</width>
    <height>528</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Task Manager Settings</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="QGroupBox" name="WLContentGB">
     <property name="title">
      <string>General</string>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_2">
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout">
        <property name="spacing">
         <number>0</number>
        </property>
        <property name="leftMargin">
         <number>0</number>
        </property>
        <property name="topMargin">
         <number>0</number>
        </property>
        <property name="rightMargin">
         <number>0</number>
        </property>
        <property name="bottomMargin">
         <number>0</number>
        </property>
        <item>
         <widget class="QCheckBox" name="limitByDesktopCB">
          <property name="text">
           <string>Show only windows from desktop</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QComboBox" name="showDesktopNumCB"/>
        </item>
       </layout>
      </item>
      <item>
       <widget class="QCheckBox" name="limitByScreenCB">
        <property name="text">
         <string>Show only windows from &amp;panel's screen</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QCheckBox" name="limitByMinimizedCB">
        <property name="text">
         <string>Show only minimized windows</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QCheckBox" name="raiseOnCurrentDesktopCB">
        <property name="text">
         <string>Raise minimized windows on current desktop</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QCheckBox" name="middleClickCB">
        <property name="text">
         <string>Close on middle-click</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QGroupBox" name="WLMousewheelGB">
     <property name="title">
      <string>Mouse Wheel</string>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_mousewheel">
      <item>
       <widget class="QComboBox" name="wheelEventsActionCB"/>
      </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout_2">
        <property name="spacing">
         <number>0</number>
        </property>
        <property name="leftMargin">
         <number>0</number>
        </property>
        <property name="topMargin">
         <number>0</number>
        </property>
        <property name="rightMargin">
         <number>0</number>
        </property>
        <property name="bottomMargin">
         <number>0</number>
        </property>
        <item>
         <widget class="QLabel" name="wheelDeltaThresholdLabel">
          <property name="text">
           <string>Wheel Delta Threshold</string>
          </property>
         </widget>
        </item>
        <item>
        <widget class="QSpinBox" name="wheelDeltaThresholdSB">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
           <horstretch>0</horstretch>
           <verstretch>0</verstretch>
          </sizepolicy>
         </property>
         <property name="suffix">
          <string> px</string>
         </property>
         <property name="minimum">
          <number>0</number>
         </property>
         <property name="maximum">
          <number>300</number>
         </property>
        </widget>
        </item>
       </layout>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QGroupBox" name="groupingGB">
     <property name="title">
      <string>Window &amp;grouping</string>
     </property>
     <property name="checkable">
      <bool>true</bool>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_3">
      <item>
       <widget class="QCheckBox" name="showGroupOnHoverCB">
        <property name="text">
         <string>Show popup on mouse hover</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QCheckBox" name="ungroupedNextToExistingCB">
     <property name="text">
      <string>Put buttons of the same class next to each other</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QGroupBox" name="WLAppearanceGB">
     <property name="title">
      <string>Appearance</string>
     </property>
     <layout class="QFormLayout" name="formLayout">
      <property name="fieldGrowthPolicy">
       <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
      </property>
      <item row="0" column="0">
       <widget class="QLabel" name="buttonStyleL">
        <property name="text">
         <string>Button style</string>
        </property>
       </widget>
      </item>
      <item row="0" column="1">
       <widget class="QComboBox" name="buttonStyleCB"/>
      </item>
      <item row="1" column="0">
       <widget class="QLabel" name="buttonWidthL">
        <property name="text">
         <string>Maximum button width</string>
        </property>
       </widget>
      </item>
      <item row="1" column="1">
       <widget class="QSpinBox" name="buttonWidthSB">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="suffix">
         <string> px</string>
        </property>
        <property name="minimum">
         <number>1</number>
        </property>
        <property name="maximum">
         <number>2147483647</number>
        </property>
       </widget>
      </item>
      <item row="2" column="0">
       <widget class="QLabel" name="buttonHeightL">
        <property name="text">
         <string>Maximum button height</string>
        </property>
       </widget>
      </item>
      <item row="2" column="1">
       <widget class="QSpinBox" name="buttonHeightSB">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="suffix">
         <string> px</string>
        </property>
        <property name="minimum">
         <number>1</number>
        </property>
        <property name="maximum">
         <number>500</number>
        </property>
       </widget>
      </item>
      <item row="3" column="0" colspan="2">
       <widget class="QCheckBox" name="autoRotateCB">
        <property name="text">
         <string>Auto&amp;rotate buttons when the panel is vertical</string>
        </property>
       </widget>
      </item>
      <item row="4" column="0" colspan="2">
       <widget class="QCheckBox" name="iconByClassCB">
        <property name="text">
         <string>Use icons by WindowClass, if available</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <spacer name="verticalSpacer">
     <property name="orientation">
      <enum>Qt::Vertical</enum>
     </property>
     <property name="sizeHint" stdset="0">
      <size>
       <width>20</width>
       <height>40</height>
      </size>
     </property>
    </spacer>
   </item>
   <item>
    <widget class="QDialogButtonBox" name="buttons">
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="standardButtons">
      <set>QDialogButtonBox::Close|QDialogButtonBox::Reset</set>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>buttons</sender>
   <signal>accepted()</signal>
   <receiver>LXQtTaskbarConfiguration</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>262</x>
     <y>496</y>
    </hint>
    <hint type="destinationlabel">
     <x>157</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>buttons</sender>
   <signal>rejected()</signal>
   <receiver>LXQtTaskbarConfiguration</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>330</x>
     <y>496</y>
    </hint>
    <hint type="destinationlabel">
     <x>286</x>
     <y>274</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
